# RouteAbout

./: README.md  demo.py  demo_stt.py  pyproject.toml
src/route_about/grammars/: stvim.lark
src/route_about/stvim/: __init__.py  commands.py  executor.py  transformer.py
src/route_about/transformers/: stvim.py
src/route_about/tts/: server.py
src/route_about/ui/: __init__.py  demo_utils.py  display.py  prompt.py
