[project]
name = "routeabout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "lark>=1.2.2",
    "pylark>=0.0.13",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
dspy = [
    "dspy>=2.5.26",
]
poc = [
    "jupyter>=1.1.1",
]
stvim = [
    "pynvim>=0.5.2",
    "rich>=14.0.0",
]
